added sortable fields and common columns